--- a/Organization-Management-ERP/package.json
+++ b/Organization-Management-ERP/package.json
@@ -16,12 +16,17 @@
     "@angular/common": "~12.1.1",
     "@angular/compiler": "~12.1.1",
     "@angular/core": "~12.1.1",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~12.1.1",
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
     "@angular/service-worker": "~12.1.1",
+    "@capacitor/core": "3.1.1",
+    "@ionic-native/firebase-authentication": "^5.34.0",
     "@ionic/angular": "^5.5.2",
+    "cordova-plugin-firebase-authentication": "^5.0.0",
+    "firebase": "^8.7.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -36,6 +41,7 @@
     "@angular/compiler": "~12.1.1",
     "@angular/compiler-cli": "~12.1.1",
     "@angular/language-service": "~12.0.1",
+    "@capacitor/cli": "3.1.1",
     "@ionic/angular-toolkit": "^4.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
